@@ -44,8 +44,12 @@ def shift_model(model, shift_x, shift_y, shift_z):
     matrix = ((1, 0, 0, shift_x), (0, 1, 0, shift_y), (0, 0, 1, shift_z))
     model.transform(matrix)
     
-def scale_model(model, scale):
-    matrix = ((scale, 0, 0, 0), (0, scale, 0, 0), (0, 0, scale, 0))
+def scale_model(model, scale_x, scale_y=None, scale_z=None):
+    if scale_y is None:
+        scale_y = scale_x
+    if scale_z is None:
+        scale_z = scale_x
+    matrix = ((scale_x, 0, 0, 0), (0, scale_y, 0, 0), (0, 0, scale_z, 0))
     model.transform(matrix)
 
 def dependency_details_gtk():
